--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </style>
 </head>
 <body>
-    <h1>Hasnaa's Profile Card</h1>
-    <p>This is my website homepage.</p>
+    <h1>Hasnaa</h1>
+    <p class="role">Web Developer</p>
+    <p class="bio">Passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
 </body>
 </html>
