--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hasnaa's Profile Card</h1>
     <p class="role">Web Developer</p>
-    <p class="bio">Passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
+    <p class="bio">Hello Everyone! I'm a Web Development enthusiast who is passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
 </body>
 </html>
