--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hasnaa's Profile Card</h1>
-    <h2> Engineering Student </h2>
-    <p class="role">Web Developer</p>
-    <p class="bio">Hello Everyone! I'm a Web Development enthusiast who is passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
+    <div class="card">
+        <h1>Hasnaa's Profile Card</h1>
+        <h2> Engineering Student </h2>
+        <p class="role">Web Developer</p>
+        <p class="bio">Hello Everyone! I'm a Web Development enthusiast who is passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
+    </div>
 </body>
 </html>
