--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="card">
-        <h1>Hasnaa's Profile Card</h1>
+        <h1> Hasnaa's Profile Card</h1>
         <h2> Engineering Student </h2>
         <p class="role">Web Developer</p>
         <p class="bio">Hello Everyone! I'm a Web Development enthusiast who is passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
+        <h3>My favorite websites</h3>
     </div>
 </body>
 </html>
