--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <p class="role">Web Developer</p>
         <p class="bio">Hello Everyone! I'm a Web Development enthusiast who is passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
         <h3>My Favorite Websites</h3>
+        <ul>
+            <li><a href="https://www.github.com">GitHub</a></li>
+            <li><a href="https://www.stackoverflow.com">Stack Overflow</a></li>
+            <li><a href="https://www.mdn.org">MDN Web Docs</a></li>
+            <li><a href="https://www.freecodecamp.org">FreeCodeCamp</a></li>
+        </ul>
     </div>
 </body>
 </html>
