--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h3>My Favorite Websites</h3>
         <ul>
             <li><a href="https://www.github.com">GitHub</a></li>
-            <li><a href="https://www.stackoverflow.com">Stack Overflow</a></li>
-            <li><a href="https://www.mdn.org">MDN Web Docs</a></li>
+            <li><a href="https://chatgpt.com/">ChatGPT</a></li>
+            <li><a href="https://infrastructurereportcard.org/">ASCE Report Cards</a></li>
             <li><a href="https://www.freecodecamp.org">FreeCodeCamp</a></li>
         </ul>
     </div>
