Changed fromat of photo and made circular

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="card">
+        <img src="IMG_7536.jpeg" alt="Hasnaa's Profile Picture" class="profile-image">
         <h1> Hasnaa's Profile Card</h1>
         <h2> Engineering Student </h2>
         <p class="role">Web Developer</p>
