fix: update LinkedIn link to include proper URL format

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="bio">Hello Everyone! I'm a Web Development enthusiast who is passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
         <h3>My Favorite Websites</h3>
         <ul>
-            <li><a href="www.linkedin.com/in/hasnaa-mohamed-3b9726325/">linkedin</a></li>
+            <li><a href="https://www.linkedin.com/in/hasnaa-mohamed-3b9726325/">linkedin</a></li>
             <li><a href="https://chatgpt.com/">ChatGPT</a></li>
             <li><a href="https://infrastructurereportcard.org/">ASCE Report Cards</a></li>
             <li><a href="https://www.freecodecamp.org">FreeCodeCamp</a></li>
