fix: update title and heading to reflect correct name

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hasnaa's Profile Card</title>
+    <title>Hasnaa Mohamed</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="card">
         <img src="IMG_7536.jpeg" alt="Hasnaa's Profile Picture" class="profile-image">
-        <h1> Hasnaa's Profile Card</h1>
+        <h1> Hasnaa Mohamed</h1>
         <h2> Engineering Student </h2>
         <p class="bio">Hello Everyone! I'm a Web Development enthusiast who is passionate about creating interactive and functional web experiences. I love working with modern technologies and solving complex problems.</p>
         <h3>My Favorite Websites</h3>
